# Android-ImGUI-ModMenu

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/zodys/gui/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: Categories.h  Hooks.cpp  Hooks.h  Main.cpp  Main.h  Menu.cpp  Menu.h  Module.h
app/src/main/cpp/src/imgui/: imgui_draw.cpp  imgui_impl_android.cpp  imgui_impl_android.h  imgui_widgets.cpp
app/src/main/cpp/src/memory/Il2cppResolver/: Data.hpp  Defines.hpp  IL2CPP_Resolver.hpp  Includes.h  Logger.h  README.md
app/src/main/cpp/src/memory/Il2cppResolver/API/: Array.h  Callback.hpp  Class.hpp  String.hpp  Thread.hpp
app/src/main/cpp/src/memory/Il2cppResolver/Unity/: Defines.hpp
app/src/main/cpp/src/memory/Il2cppResolver/Unity/API/: Camera.hpp  Component.hpp  GameObject.hpp  LayerMask.hpp  Object.hpp  Rigidbody.hpp  Transform.hpp
app/src/main/cpp/src/memory/Il2cppResolver/Unity/Structures/: Engine.hpp  System_String.hpp  il2cpp.hpp  il2cppArray.hpp  il2cppDictionary.hpp
app/src/main/cpp/src/memory/Il2cppResolver/Unity/Structures/utf8/: utf8.h
app/src/main/cpp/src/memory/Il2cppResolver/Utils/: Helper.hpp  VTable.hpp
app/src/main/cpp/src/modules/: Buffs.h  Items.h  Player.h
app/src/main/cpp/src/stuff/: Config.cpp  Config.h  Java.h  logger.h
app/src/main/java/com/unity3d/player/: UnityPlayer.java  UnityPlayerActivity.java
app/src/main/java/com/zodys/gui/: MyUnityPlayerActivity.java  Surface.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zodys/gui/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
